# linalg3d

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  cppcheck.suppress  naming_exceptions.txt  package.xml
.github/scripts/: pre-analysis.sh
.github/workflows/: build-test.yml  ci.yml  cpp-quality.yml  docker.yml  publish.yml
bench/: linalg3d_bench.cpp
cmake/: linalg3dConfig.cmake.in
include/linalg3d/: angle.hpp  constexpr_math.hpp  euler_angles.hpp  format.hpp  linalg.hpp  matrix2x2.hpp  matrix3x3.hpp  matrix4x4.hpp  quaternion.hpp  simd.hpp  vector2.hpp  vector3.hpp  vector4.hpp
python/: CMakeLists.txt  pyproject.toml
python/linalg3d/: __init__.py
python/src/: bindings.cpp
python/tests/: test_fuzz.py  test_matrices.py  test_numpy_interop.py  test_quaternions.py  test_scipy_interop.py  test_vectors.py
test/: linalg3d_test.cpp  math_verification_test.cpp
